--- a/ionic.config.json
+++ b/ionic.config.json
@@ -4,5 +4,15 @@
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+    "proxies": [
+    {
+      "path": "/esbsv",
+      "proxyUrl": "http://192.168.0.197:8280"
+    },
+    {
+      "path": "/openkm",
+      "proxyUrl":"http://192.168.0.97:8080/OpenKM"
+    }
+  ]
 }
