--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.6.0",
     "@ionic-native/status-bar": "4.4.0",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "cordova-android": "6.3.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-crosswalk-webview": "^2.4.0",
@@ -39,6 +39,7 @@
     "echarts": "^4.0.4",
     "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "ngx-echarts": "^2.1.0",
     "rxjs": "5.5.2",
