--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/app-version": "^4.7.0",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/file": "^4.7.0",
+    "@ionic-native/file-opener": "^4.7.0",
+    "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/screen-orientation": "^4.6.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.6.0",
@@ -28,8 +32,12 @@
     "@ionic/storage": "^2.1.3",
     "cordova-android": "6.3.0",
     "cordova-browser": "5.0.3",
+    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-crosswalk-webview": "^2.4.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-opener2": "^2.0.19",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-screen-orientation": "^3.0.1",
@@ -66,7 +74,11 @@
         "XWALK_MODE": "embedded",
         "XWALK_MULTIPLEAPK": "true"
       },
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-opener2": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "browser",
