--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/storage": "^2.1.3",
     "cordova-android": "6.3.0",
     "cordova-browser": "5.0.3",
+    "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-crosswalk-webview": "^2.4.0",
     "cordova-plugin-device": "^2.0.2",
@@ -78,7 +79,8 @@
       "cordova-plugin-app-version": {},
       "cordova-plugin-file": {},
       "cordova-plugin-file-opener2": {},
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "browser",
