版本：1.0.6 1.更新穿透显示客户名称 2.增加一个httpservice

--- a/app-version.json
+++ b/app-version.json
@@ -1,7 +1,7 @@
 {
-    "version": "1.0.5",
-    "release_date": "2018年4月27日15:21:18",
-    "desc": "版本：1.0.5 更新内容：更新地址正式启用",
+    "version": "1.0.6",
+    "release_date": "2018年4月28日11:33:09",
+    "desc": "版本：1.0.6 更新内容：穿透显示客户",
     "app_name": "yotrioSMRPT",
     "app_url_android": "http://192.168.0.197:2222/android-armv7-debug.apk",
     "app_url_iOS": ""
