--- a/app-version.json
+++ b/app-version.json
@@ -1,7 +1,7 @@
 {
-    "version": "1.1.0",
-    "release_date": "2018年5月4日16:22:20",
-    "desc": "版本：1.1.0 更新内容：1. 税务中心重新排序 2. 样式调试",
+    "version": "1.1.1",
+    "release_date": "2018年5月7日15:28:10",
+    "desc": "版本：1.1.1 更新内容：1. 调整税务数据中心年度样式 2. 税务中心全部结果取整",
     "app_name": "yotrioSMRPT",
     "app_url_android": "http://192.168.0.197:2222/android-armv7-debug.apk",
     "app_url_iOS": ""
