1. 调整税务数据中心年度样式，同时更换其他税费计算 = 其他税费 + 其他经费 2. 营销数据中心业务部门名字变更增加模糊匹配
note: 业务部门接单总金额 != 按地区统计接单总金额，正常，少了国内市场部

--- a/app-version.json
+++ b/app-version.json
@@ -1,7 +1,7 @@
 {
-    "version": "1.1.11",
-    "release_date": "2018年5月7日15:28:10",
-    "desc": "版本：1.1.11 更新内容：1. 调整税务数据中心年度样式",
+    "version": "1.1.12",
+    "release_date": "2018年5月11日17:12:15",
+    "desc": "版本：1.1.12 更新内容：1. 调整税务数据中心年度样式，同时更换其他税费计算 = 其他税费 + 其他经费 2. 营销数据中心业务部门名字变更增加模糊匹配",
     "app_name": "yotrioSMRPT",
     "app_url_android": "http://192.168.0.197:2222/android-armv7-debug.apk",
     "app_url_iOS": ""
