--- a/app-version.json
+++ b/app-version.json
@@ -1,7 +1,7 @@
 {
-    "version": "1.1.12",
-    "release_date": "2018年5月11日17:12:15",
-    "desc": "版本：1.1.12 更新内容：1. 调整税务数据中心年度样式，同时更换其他税费计算 = 其他税费 + 其他经费 2. 营销数据中心业务部门名字变更增加模糊匹配",
+    "version": "1.1.13",
+    "release_date": "2018年5月14日11:14:15",
+    "desc": "版本：1.1.13 更新内容：1. 税务数据中心使用发布订阅事件机制 2. 样式调整",
     "app_name": "yotrioSMRPT",
     "app_url_android": "http://192.168.0.197:2222/android-armv7-debug.apk",
     "app_url_iOS": ""
