--- a/app-version.json
+++ b/app-version.json
@@ -1,7 +1,7 @@
 {
-    "version": "1.1.14",
-    "release_date": "2018年5月15日17:10:17",
-    "desc": "版本：1.1.14 更新内容：1. 税务数据中心数据产业名调整  2. 增加库存数据中心",
+    "version": "1.1.15",
+    "release_date": "2018年5月16日10:07:24",
+    "desc": "版本：1.1.15 更新内容：1. 库存数据中心增加月份选择组件",
     "app_name": "yotrioSMRPT",
     "app_url_android": "http://192.168.0.197:2222/android-armv7-debug.apk",
     "app_url_iOS": ""
