--- a/app-version.json
+++ b/app-version.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.1.20",
-  "release_date": "2018年5月28日15:17:23",
-  "desc": "版本：1.1.20 更新内容：1. 所有配置相关，单独文件中配置 2. 修复股票投资中心一个由于引用引起的修改原始数据导致切换页面股票持有金额显示错误的bug",
+  "version": "1.1.22",
+  "release_date": "2018年5月29日16:38:22",
+  "desc": "版本：1.1.22 更新内容：1. 股权股票数据中心可以自由排序",
   "app_name": "yotrioSMRPT",
   "app_url_android": "http://192.168.0.97:6800/APK/android-armv7-debug.apk",
   "app_url_iOS": ""
