--- a/package.json
+++ b/package.json
@@ -22,23 +22,27 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/app-version": "^4.7.0",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/document-viewer": "^4.7.0",
     "@ionic-native/file": "^4.7.0",
     "@ionic-native/file-opener": "^4.7.0",
     "@ionic-native/file-transfer": "^4.7.0",
+    "@ionic-native/ftp": "^4.7.0",
     "@ionic-native/screen-orientation": "^4.6.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.6.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
-    "cordova-android": "6.3.0",
+    "cordova-android": "^7.1.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-crosswalk-webview": "^2.4.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-document-viewer": "^0.9.10",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-opener2": "^2.0.19",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-ftp": "^1.1.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-screen-orientation": "^3.0.1",
@@ -50,9 +54,11 @@
     "ionic-angular": "3.9.2",
     "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
+    "ng2-pdf-viewer": "^5.0.1",
     "ngx-echarts": "^2.1.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "webpack": "^2.2.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -80,7 +86,9 @@
       "cordova-plugin-file": {},
       "cordova-plugin-file-opener2": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-android-permissions": {}
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-document-viewer": {},
+      "cordova-plugin-ftp": {}
     },
     "platforms": [
       "browser",
