--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ionicons": "3.0.0",
     "ng2-pdf-viewer": "^5.0.1",
     "ngx-echarts": "^2.1.0",
+    "ngx-pagination": "^3.1.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "webpack": "^2.2.0",
