--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic-native/sqlite": "^4.6.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "^2.1.3",
+    "@types/lodash": "^4.14.110",
     "cordova-android": "^7.1.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-android-permissions": "^1.0.0",
@@ -54,6 +55,7 @@
     "ionic-angular": "3.9.2",
     "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.10",
     "ng2-pdf-viewer": "^5.0.1",
     "ngx-echarts": "^2.1.0",
     "ngx-pagination": "^3.1.1",
