--- a/app-version.json
+++ b/app-version.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.2.12",
-  "release_date": "2018年6月25日16:54:05",
-  "desc": "版本：1.2.12 更新内容：1. 经营数据中心修改默认显示时间，bar y轴指标动态调整 2. 制造中心数据毛利率按件毛利率修改",
+  "version": "1.3.0",
+  "release_date": "2018年6月28日11:12:06",
+  "desc": "版本：1.3.0 更新内容：1. 加入权限控制 2. 加入制造部返工数据中心",
   "app_name": "yotrioSMRPT",
   "app_url_android": "http://192.168.0.97:6800/APK/android-armv7-debug.apk",
   "app_url_iOS": ""
