--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/android-permissions": "^4.8.0",
     "@ionic-native/app-version": "^4.7.0",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/document-viewer": "^4.7.0",
@@ -31,6 +32,7 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.6.0",
     "@ionic-native/status-bar": "4.4.0",
+    "@ionic-native/uid": "^4.8.0",
     "@ionic/storage": "^2.1.3",
     "@types/lodash": "^4.14.110",
     "cordova-android": "^7.1.0",
@@ -48,6 +50,7 @@
     "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-uid": "^1.3.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.0",
     "echarts": "^4.0.4",
@@ -91,7 +94,8 @@
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-document-viewer": {},
-      "cordova-plugin-ftp": {}
+      "cordova-plugin-ftp": {},
+      "cordova-plugin-dreamover-uid": {}
     },
     "platforms": [
       "browser",
