--- a/app-version.json
+++ b/app-version.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.3.25",
-  "release_date": "2018年7月25日16:51:18",
-  "desc": "版本：1.3.25 更新内容：1. 增加财务总监MAC地址绑定",
+  "version": "1.3.26",
+  "release_date": "2018年10月9日10:39:48",
+  "desc": "版本：1.3.26 更新内容：1. 税务中心调整，每月取累计数",
   "app_name": "yotrioSMRPT",
   "app_url_android": "http://192.168.0.97:6800/APK/android-armv7-debug.apk",
   "app_url_iOS": ""
